[3.6] bpo-31505: Fix an assertion failure in json, in case _json.make_encoder() received a bad encoder() argument. (GH-3643) (#3777)

(cherry picked from commit 2b382dd6121bb1e4b75470fb3ef8555665df3eb6)